[gd_scene load_steps=3 format=3 uid="uid://b56orn6gpj15h"]

[ext_resource type="Script" uid="uid://ckegko7w4tsuh" path="res://album_case.gd" id="1_ea5sd"]
[ext_resource type="FontFile" uid="uid://6ybbtdjigu8h" path="res://fonts/m6x11.ttf" id="2_1rb7b"]

[node name="AlbumCase" type="Node2D" groups=["AlbumCase"]]
script = ExtResource("1_ea5sd")

[node name="SignPolygon" type="Polygon2D" parent="."]
position = Vector2(-76, -80)
scale = Vector2(144, 152)
color = Color(0.462745, 0.258824, 0.541176, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 0.493043, 1, 1, 0.78558, 1, 0, 1)
uv = PackedVector2Array(69.973, 75.093, 208.213, 88.7463, 150.186, 182.613, 59.733, 162.133)

[node name="Shadow" type="Polygon2D" parent="SignPolygon"]
z_index = -1
position = Vector2(0.0277779, 0.0263159)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0.78558, 1, 0, 1)
uv = PackedVector2Array(69.973, 75.093, 208.213, 88.7463, 150.186, 182.613, 59.733, 162.133)

[node name="SignPolygon2" type="Polygon2D" parent="."]
z_index = 1
position = Vector2(-96, -104)
scale = Vector2(184, 32)
color = Color(0.462745, 0.258824, 0.541176, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)
uv = PackedVector2Array(69.973, 75.093, 208.213, 88.7463, 150.186, 182.613, 59.733, 162.133)

[node name="Shadow" type="Polygon2D" parent="SignPolygon2"]
z_index = -1
position = Vector2(0.0220994, 0.139263)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0.78558, 1, 0, 1)
uv = PackedVector2Array(69.973, 75.093, 208.213, 88.7463, 150.186, 182.613, 59.733, 162.133)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0.984314, 0.94902, 0.211765, 1)
z_index = 1
clip_contents = false
offset_left = -92.0
offset_top = -100.0
offset_right = 84.0
offset_bottom = -68.0
theme_override_fonts/normal_font = ExtResource("2_1rb7b")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[wave]Albums"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="Containers" type="Node2D" parent="."]
position = Vector2(-76, -72)

[node name="Container" type="Polygon2D" parent="Containers"]
position = Vector2(80, 12)
scale = Vector2(56, 56)
color = Color(0.219608, 0.0823529, 0.141176, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="Shadow" type="Polygon2D" parent="Containers/Container"]
show_behind_parent = true
position = Vector2(0.0357141, 0.0357143)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="Container2" type="Polygon2D" parent="Containers"]
position = Vector2(8, 12)
scale = Vector2(56, 56)
color = Color(0.219608, 0.0823529, 0.141176, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="Shadow" type="Polygon2D" parent="Containers/Container2"]
show_behind_parent = true
position = Vector2(0.0357142, 0.0357143)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="Container3" type="Polygon2D" parent="Containers"]
position = Vector2(80, 76)
scale = Vector2(56, 56)
color = Color(0.219608, 0.0823529, 0.141176, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="Shadow" type="Polygon2D" parent="Containers/Container3"]
show_behind_parent = true
position = Vector2(0.0357141, 0.0357143)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="Container4" type="Polygon2D" parent="Containers"]
position = Vector2(8, 76)
scale = Vector2(56, 56)
color = Color(0.219608, 0.0823529, 0.141176, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="Shadow" type="Polygon2D" parent="Containers/Container4"]
show_behind_parent = true
position = Vector2(0.0357142, 0.0357143)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="Albums" type="Node2D" parent="."]
position = Vector2(-76, -72)
